# A2UI4LINE

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __main__.py  a2ui_state.py  a2ui_to_flex.py  agent.py  config.py  line_api.py  main.py
tests/: test_a2ui_to_flex.py  test_confirm.py  test_location.py  test_media.py
